Add update checker and notification
Introduce an UpdateChecker that queries Modrinth for the latest plugin version and compares it against the running version (async checks, semver comparison). Wire the checker into the main plugin: add UpdateChecker field/import, start periodic async checks every 30 minutes, and register an UpdateNotificationListener to notify staff on join. Add a /staffplus check-update (alias: update) command with async handling and tab completion, and expose methods to report status to players. Minor formatting and build metadata updates included.